attempt at fixing guildlist overflow

--- a/src/Components/Guild/Guild.module.css
+++ b/src/Components/Guild/Guild.module.css
@@ -1,12 +1,12 @@
 .guild {
 	display: flex;
-	justify-content: center;
+
 	align-items: center;
 	aspect-ratio: 1/1;
 	width: 65%;
 	margin: 0 auto;
 	margin-top: 0.75rem;
-	position: relative;
+	position: static;
 	img {
 		transition: all 300ms;
 		width: 100%;
@@ -26,11 +26,14 @@
 		width: 16ch;
 		text-align: center;
 		translate: -100%;
+		/* transition on left change */
 		transition: all 300ms;
 	}
 }
 
 .guild:hover {
+	width: 66.01%;
+	margin-top: 0.69rem;
 	img {
 		border-radius: 15%;
 	}
@@ -40,22 +43,20 @@
 	}
 }
 
-.guild::before {
+.before {
 	position: absolute;
 	content: '';
 	width: 0rem;
 	height: 0rem;
 	display: block;
-	left: -1.2rem;
-	top: calc(50% - 0.5rem);
+	translate: -1.1rem 0.65rem;
 	background-color: var(--text);
 	border-radius: 100px;
 
 	transition: all 300ms ease-in-out;
 }
 
-.guild:hover::before {
+.guild:hover .before {
 	width: 0.75rem;
 	height: 2rem;
-	top: calc(50% - 1.1rem);
 }
