--- a/src/Components/GuildList/GuildList.module.css
+++ b/src/Components/GuildList/GuildList.module.css
@@ -3,4 +3,18 @@
 	height: 100%;
 	display: flex;
 	justify-content: center;
+	position: sticky;
+	top: 0;
+	left: 0;
+
+	ul {
+		position: static;
+		overflow-x: hidden;
+		overflow-y: scroll;
+		max-height: 100vh;
+		/* change scrollbar */
+		&::-webkit-scrollbar {
+			width: 1px;
+		}
+	}
 }
